--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
+<html ng-app="MyApp">
+<head>
+    <base href="/">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>ShowTrackr</title>
+    <link rel="icon" type="image/png" href="/public/favicon.png"/>
+    <link href="/public/stylesheets/style.css" rel="stylesheet">
+</head>
+<body>
+
+<div ng-view></div>
+
+<script src="/public/vendor/angular.js"></script>
+<script src="/public/vendor/angular-strap.js"></script>
+<script src="/public/vendor/angular-strap.tpl.js"></script>
+<script src="/public/vendor/angular-messages.js"></script>
+<script src="/public/vendor/angular-resource.js"></script>
+<script src="/public/vendor/angular-route.js"></script>
+<script src="/public/vendor/angular-cookies.js"></script>
+<script src="/public/vendor/moment.min.js"></script>
+</body>
 </html>
