--- a/public/stylesheets/bootstrap/_theme.scss
+++ b/public/stylesheets/bootstrap/_theme.scss
@@ -47,7 +47,7 @@
 // Mixin for generating new styles
 @mixin btn-styles($btn-color: #555) {
   @include gradient-vertical($start-color: $btn-color, $end-color: darken($btn-color, 12%));
-  @include reset-filter; // Disable gradients for IE9 because filter bleeds through rounded corners; see https://github.com/twbs/bootstrap/issues/10620
+  @include reset-filter; // Disable gradients for IE9 because filters bleeds through rounded corners; see https://github.com/twbs/bootstrap/issues/10620
   background-repeat: repeat-x;
   border-color: darken($btn-color, 14%);
 
